fix bug 548584, imap folder size not calculated correctly when condstore is used, r/sr=neil